// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component with all required props 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #BF3045;
  height: 18px;
  width: 18px;
}

<div
  class="ValidationMessage"
  data-test-id="cf-ui-validation-message"
>
  <svg
    class="emotion-0 ValidationMessage__icon"
    data-test-id="cf-ui-icon"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
    <path
      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
  </svg>
  <p
    class="ValidationMessage__text"
  >
    This field is required
  </p>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #BF3045;
  height: 18px;
  width: 18px;
}

<div
  class="ValidationMessage my-extra-class"
  data-test-id="cf-ui-validation-message"
>
  <svg
    class="emotion-0 ValidationMessage__icon"
    data-test-id="cf-ui-icon"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
    <path
      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
  </svg>
  <p
    class="ValidationMessage__text"
  >
    This field is required
  </p>
</div>
`;
